--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -17,8 +17,12 @@
 
 <%= render partial: 'articles/comment', collection: @article.comments %>
 <%= render partial: 'comments/form' %>
+<% if logged_in? %>
+
+
 
 <%= link_to "<< Back to Articles List", articles_path %><br>
 <%= link_to "delete", article_path(@article), method: :delete, data: {confirm: "Really delete the article?"}
  %><br>
 <%= link_to "edit", edit_article_path(@article) %>
+<% end %>
